<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!-- Blank content_main -->
    <include layout="@layout/content_main" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomemessage"
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User: "
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:textSize="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_login"
            android:onClick="openLogin"
            />

        <Button
            android:id="@+id/training_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_training"
            android:onClick="openTraining"
            />

        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_test"
            android:onClick="openTest"
            />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_settings"
            android:onClick="openSettings"
            />

        <Button
            android:id="@+id/results_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_results"
            android:onClick="openResults"
            />


    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
