<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="paolocattaneo.stereoacuity.LoginActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"

        android:weightSum="1">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_username"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp" />



            <!-- back button deprecated
            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:onClick="back"
                />
             -->

        <EditText
            android:id="@+id/edittext_username"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />


            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_confirm"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="confirmLogin"
                android:layout_gravity="center_horizontal"/>


        <!-- PASSWORD: yet not implemented
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
        -->

        <ListView
            android:id="@+id/users_listview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:textAlignment="center" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
